src/test/ui/question-mark-type-infer.stderr
error[E0284]: type annotations required: cannot resolve `<_ as std::ops::Try>::Ok == _`
  --> $DIR/question-mark-type-infer.rs:12:5
   |
LL |     l.iter().map(f).collect()?
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0284`.
